<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Spark</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sign_up_page_one_main">SignUpPageOneMainActivity</string>
    <string name="signup_text">SIGN UP</string>
    <string name="next_text">Next</string>
    <string name="signup_desc_text">Please fill in the following fields to create your new SPARK account.</string>
    <string name="shippping_desc_text">Please confirm the following details before completing your order.</string>
    <string name="shippping_address_desc_text">Please confirm your mailing details.</string>
    <string name="shippping_address_desc_text_2">This Service is only applicable for local postage.</string>
    <string name="signup_addr_text">Please confirm your mailing details.This Service is only applicable for local postage.</string>
    <string name="title_activity_address_main">AddressMainActivity</string>
    <string name="title_activity_pin_validate_main">PinValidateMainActivity</string>
    <string name="title_activity_term_of_use_main">TermOfUseMainActivity</string>
    <string name="title_activity_main_photo_select">MainPhotoSelectActivity</string>
    <string name="title_activity_image_list">ImageListActivity</string>
    <string name="title_activity_image_grid_view">ImageGridViewActivity</string>
    <string name="title_activity_image_guid_crop">ImageGuidCropActivity</string>
    <string name="title_activity_image_crop">ImageCropActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="app_id">1534822403398306</string>
    <string name="app_id_debug">937118269651012</string>
    <string name="title_activity_guide_total_print">GuideTotalPrintActivity</string>
    <string name="title_activity_image_page_summary">ImagePageSummaryActivity</string>
    <string name="title_activity_shipping_page">ShippingPageActivity</string>
    <string name="title_activity_shipping_address">ShippingAddressActivity</string>
    <string name="title_activity_email_login">EmailLoginActivity</string>
    <string name="title_activity_tutorial_page_one">TutorialPageOneActivity</string>
    <string name="title_activity_tutorial_page_teo">TutorialPageTeoActivity</string>
    <string name="title_activity_setting_page">SettingPageActivity</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="title_activity_faq">FaqActivity</string>
    <string name="title_activity_contact_us">ContactUsActivity</string>
    <string name="title_activity_activity_notification">ActivityNotificationActivity</string>
    <string name="title_activity_perk_page">PerkPageActivity</string>
    <string name="cancel_confirmation_header">Cancel Confirmation</string>
    <string name="cancel_confirmation_desc">Do you want to cancel your order?</string>
    <string name="title_activity_perk_detail_main">PerkDetailMainActivity</string>
    <string name="faq_no_1_header">1. How many photos can we print for free?</string>
    <string name="faq_no_1_detail">Every SPARK member is given 10 credits to use each month and is entitled to print 10 free photos. Your credits will be renewed one month after the date they have been used.</string>
    <string name="faq_no_2_header">2. Why are the photos free?</string>
    <string name="faq_no_2_detail">No hidden costs, no strings attached. Your valued prints will be delivered to you absolutely free. This is possible thanks to our sponsors who support the cost of printing, and will use the back of each photo or envelope inserts, to advertise relevant promotions, discounts and even more freebies for you!</string>
    <string name="faq_no_3_header">3. How long will my order take to arrive?</string>
    <string name="faq_no_3_detail">Your order will be delivered by SingPost and should take about 7 working days from the date of confirmation to reach you. However, please understand we cannot warrant the efficiency and standards of SingPost. As such, some orders might take longer than others.</string>
    <string name="faq_no_4_header">4. What if I don’t receive my prints?</string>
    <string name="faq_no_4_detail">Please inform us if your prints have not reached you after 12 working days. Drop us an E-mail at orders@spark-asia.com and we will take it from there.</string>
    <string name="faq_no_5_header">5. What will you do with my personal data?</string>
    <string name="faq_no_5_detail">Your privacy is of utmost importance to us. We will never, ever disclose your information to any third party vendor and will take all reasonable measures to ensure your personal data is protected. Your particulars will be used by us, and only us, to match suitable promotions and discounts from our sponsors that you are likely to be interested in. We will endevour to streamline relevant information to each and every SPARK member!</string>
    <string name="faq_no_6_header">6. What will you do with my photos?</string>
    <string name="faq_no_6_detail">We do not and will not reserve the right to use your personal photos for marketing purposes. The photos you send to us are solely for processing purposes. Soon after your order is processed, we will destroy the soft copy to minimize exposure of your privacy. We will only keep it for so long as reasonably necessary in ensuring your order reaches you safely.</string>
    <string name="faq_no_7_header">7. What is the size and quality of the photos?</string>
    <string name="faq_no_7_detail">The photos are printed on 4R, 280 gsm (twice as thick as regular photo paper!) glossy photo paper.</string>
    <string name="faq_no_8_header">8. Can I print more than the number of credits given to me?</string>
    <string name="faq_no_8_detail">There is currently no option to print more than the credits you are given each month. However, do keep peeled to your seats because we will be throwing in the occasional reward of additional credits and allow you to print more photos in that month.</string>
    <string name="title_activity_profile_page">ProfilePageActivity</string>
    <string name="title_activity_change_pass">ChangePassActivity</string>
    <string name="crash_toast_text">This problem already sent to developer</string>
    <string name="email_receiver">jutha.se@gmail.com</string>
    <string name="title_activity_address_setting_page">AddressSettingPageActivity</string>

</resources>